# symmetry-refinement

./: CMakeLists.txt  LICENSE  README.md  input.yaml
predictions/: sample.yaml  small.yaml
results/: sample.csv
symmetry/: CMakeLists.txt
symmetry/include/: cpu_refinement_by_matching.h  cpu_refinement_by_matching.hpp  cpu_refinement_by_symmetry.hpp  extern.hpp  feature_detector.hpp
symmetry/src/: feature_detector.cpp  main.cpp
